<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app.homework05.MainActivity">


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/listView"
        android:layout_below="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="19dp"
        android:text="@string/searchMusic"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/track"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/track"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/favorites"
        android:textSize="20dp"
        android:layout_below="@+id/search"
        android:layout_alignStart="@+id/track"
        android:textStyle="bold"/>
</RelativeLayout>
